framec_tests/language_specific/python/v3_cli_project/positive/simple_project/project.frm
@target python
# Anchor file for project build; compile-project runs on this directory

