framec_tests/language_specific/python/v3_cli_project/negative/parent_forward_without_parent/project.frm
@target python
# Anchor for cross-file E403 negative

